@@ -2,6 +2,7 @@ Since 0.6.3
 -----------
 - implemented `FieldType` and `FieldEq` for `url::Url`
 - added a `take_or_query` method to `ForeignModel`
+- added `MaxStr` field type
 
 - removed `AsDbType::from_primitive`
 
